# lingshu

./: .env.example  .gitignore  README.md  batch_runner.py  eternal_watchdog.ps1  install.sh  lingshu.yaml  main.py  pyproject.toml  register_autostart.bat  rpc_server.py  run_10h_watchdog.ps1  run_engine.py  start_engine.bat  start_eternal.bat  stop_eternal.bat  watchdog_10h.ps1
.lingshu/: engine_checkpoint.json  feedback_history.json  profile.yaml
adapters/: __init__.py  cursor_adapter.py  ecc_adapter.py  lsp_adapter.py
agents/: __init__.py  base_agent.py  elite_agent.py  light_agent.py  strong_agent.py
commands/: __init__.py  configure.py  history.py  resume.py  run.py
config/: aliases.yaml  model_routing.yaml  path_map.yaml
core/: __init__.py  adapter_registry.py  agent_chain.py  agent_modes.py  cache_manager.py  code_indexer.py  code_map.py  codeact_engine.py  composer_engine.py  connection_pool.py  context_manager.py  cost_aware_router.py  cost_tracker.py  diff_engine.py  engine.py  error_recovery.py  execution_modes.py  feedback_learner.py  git_integration.py  health_monitor.py  inverse_verifier.py  model_router.py  models_manager.py  orchestration_core.py  orchestrator.py  pipeline.py  profile_loader.py  resource_monitor.py  root_cause_pipeline.py  sandbox.py  session_manager.py  smart_references.py  structured_output.py  token_pool.py  workflow_templates.py  workspace.py
docs/: REQUIREMENTS.md
go_exec/: worker.go
memory/: __init__.py  long_term.py  mid_term.py  short_term.py
node_cli/: cli.js  package.json
plugins/: __init__.py  base.py  (+9 more)
(+22 files in other folders)
