[project]
name = "lingshu"
version = "1.0.0"
description = "LingShu AI 自动化编程工具"
requires-python = ">=3.11"

dependencies = [
    "litellm>=1.60.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "structlog>=25.0.0",
    "aiosqlite>=0.20.0",
    "langgraph>=0.4.0",
    "psutil>=6.0.0",
    "tree-sitter>=0.23.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
]

[project.scripts]
lingshu = "main:main"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.setuptools]
packages = [
    "core", "agents", "memory", "adapters", "workflows", "tools", "plugins",
]
py-modules = ["main", "rpc_server", "batch_runner"]

[tool.setuptools.package-data]
core = ["py.typed"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"